<resources>
    <string name="app_name">Circle Connect</string>
    <string name="home">Home</string>
    <string name="network">Network</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="messages">Messages</string>
    <string name="address">%1$s, %2$s %3$s</string>
    <string name="current_location_address">%1$s %2$s, %3$s, %4$s %5$s</string>
    <string name="distance_from_customer">%.2f mi</string>
    <string name="contact_name">Contact: %1$s</string>
    <string name="no_new_messages">No new messages!</string>
    <string name="birthdate_format">%1$02d/%2$02d</string>

    <!-- Facebook -->
    <string name="facebook_app_id">2304316449853711</string>
    <string name="fb_login_protocol_scheme">fb2304316449853711</string>

    <!-- Accessibility -->
    <string name="image_logo">Image logo</string>
    <string name="sort">Sort</string>
    <string name="save">Save</string>
    <string name="filters">Filters</string>
    <string name="restaurants_and_food">Restaurants and Food</string>
    <string name="retail">Retail</string>
    <string name="arts_and_entertainment">Arts and Entertainment</string>
    <string name="service">Service</string>
    <string name="distance">Distance</string>
</resources>
