<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/outline_home_black_36dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@drawable/outline_group_black_36dp"
        android:title="@string/network"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_messages"
        android:enabled="true"
        android:icon="@drawable/outline_mail_outline_black_36dp"
        android:title="@string/messages"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/outline_account_circle_black_36dp"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>