<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/sort"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner"
            android:background="@drawable/background_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/filters"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/restaurantsFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/restaurants_and_food"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/retail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/retail"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/artsEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/arts_and_entertainment"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/service"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/distance"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:id="@+id/number_picker_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_white_background"
            app:snp_buttonBackgroundTintSelector="@color/colorPrimary"
            app:snp_buttonIconLeft="@drawable/ic_chevron_left_black_36dp"
            app:snp_buttonIconRight="@drawable/ic_chevron_right_black_36dp"
            app:snp_buttonPaddingBottom="8dp"
            app:snp_buttonPaddingLeft="8dp"
            app:snp_buttonPaddingRight="8dp"
            app:snp_buttonPaddingTop="8dp"
            app:snp_maxValue="25"
            app:snp_minValue="1"
            app:snp_orientation="horizontal"
            app:snp_stepSize="1"
            app:snp_value_text_color="@color/colorPrimary"
            app:snp_value_text_size="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white"/>

</RelativeLayout>